# SigCuriousRLWorld

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: math.md  paper_summary.md  repo_analysis.md  system_design.md
lewm_rl/: README.md
lewm_rl/configs/: stage1.yaml  stage2.yaml  stage3.yaml
lewm_rl/experiments/: run_experiments.py
lewm_rl/scripts/: evaluate.py  train.py
lewm_rl/src/: __init__.py
lewm_rl/src/agents/: ppo.py
lewm_rl/src/envs/: wrappers.py
lewm_rl/src/models/encoders/: encoder.py
lewm_rl/src/models/lewm/: modules.py  world_model.py
lewm_rl/src/rewards/: intrinsic_reward.py
lewm_rl/src/training/: factory.py  trainer.py
lewm_rl/src/utils/: logger.py  plotting.py  replay_buffer.py
lewm_rl/tests/: test_modules.py
